# townService/generated/routes.ts
@@ -36,6 +36,7 @@ const models: TsoaRoute.Models = {
             "friendlyName": {"dataType":"string","required":true},
             "isPubliclyListed": {"dataType":"boolean","required":true},
             "mapFile": {"dataType":"string"},
+            "taPassword": {"dataType":"string"},
         },
         "additionalProperties": false,
     },
@@ -119,7 +120,6 @@ export function RegisterRoutes(app: express.Router) {
                 return next(err);
             }
         });
-        // TODO regenerate with tool to include optional ta pw in createTown as frontend input
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.post('/towns',
             ...(fetchMiddlewares<RequestHandler>(TownsController)),
